      trees, bigger benefit.) (John Arbash Meinel)


  BUG FIXES:

    * Fix a test case that was failing if encoding wasn't UTF-8.
      (John Arbash Meinel, #247585)

    * Fix "no buffer space available" error when branching with the new
      smart server protocol to or from Windows.
      (Andrew Bennetts, #246180)


  DOCUMENTATION:


  TESTING:


  API CHANGES:


  INTERNALS:

    * RuleSearchers return () instead of [] now when there are no matches.
      (Ian Clatworthy)


bzr 1.6beta3 2008-07-17
-----------------------

  FEATURES:

    * New ``pre_change_branch_tip`` hook that is called before the
      branch tip is moved, while the branch is write-locked.  See the User
      Reference for signature details.  (Andrew Bennetts)

    * Rule-based preferences can now be defined for selected files in
      selected branches, allowing commands and plugins to provide
      custom behaviour for files matching defined patterns.
      See ``Rule-based preferences`` (part of ``Configuring Bazaar``)
      in the User Guide and ``bzr help rules`` for more information.
      (Ian Clatworthy)

    * Sites may suggest a branch to stack new branches on.  (Aaron Bentley)

    * Stacked branches are now supported. See ``bzr help branch`` and 
      ``bzr help push``. (Robert Collins)

  IMPROVEMENTS:

    * ``bzr export --format=tgz --root=NAME -`` to export a gzipped tarball 
      to stdout; also ``tar`` and ``tbz2``.
      (Martin Pool)

    * ``bzr (re)merge --weave`` will now use a standard Weave algorithm,
      rather than the annotation-based merge it was using. It does so by
      building up a Weave of the important texts, without needing to build
      the full ancestry. (John Arbash Meinel, #238895)

    * ``bzr send`` documents and better supports ``emacsclient`` (proper
      escaping of mail headers and handling of the MUA Mew).
      (Christophe Troestler)

    * Remembered locations can be specified by aliases, e.g. :parent, :public,